# esp-idf-components

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  README_zh.md  idf_component.yml
display_100ask_driver/: CMakeLists.txt  README.md
display_100ask_driver/src/: display_100ask_hal.c  display_100ask_hal.h
display_100ask_driver/src/drivers/: lcd_100ask_backlight.h  lcd_100ask_spi.c  lcd_100ask_spi.h
display_100ask_drivers/: CMakeLists.txt  Kconfig
display_100ask_drivers/src/: display_100ask_hal.c
display_100ask_drivers/src/drivers/: lcd_100ask_backlight.c  lcd_100ask_esp_lcd_panel.c  lcd_100ask_esp_lcd_panel.h  lcd_100ask_spi.c  lcd_100ask_spi.h
epd_100ask_drivers/: CMakeLists.txt  Kconfig
epd_100ask_drivers/src/: epd_100ask_drivers.c  epd_100ask_drivers.h  epd_100ask_hal.c  epd_100ask_hal.h  epd_100ask_luts.h
epd_100ask_drivers/src/drivers/: epd_240x360_spi_driver.c  epd_240x360_spi_driver.h
epd_100ask_drivers/src/epd_drivers/: epd_240x360_spi_driver.c
epd_100ask_drivers/src/epd_luts/: epd_240x360_luts.c  epd_240x360_luts.h
epd_100ask_paint/: CMakeLists.txt  Kconfig  README.md
epd_100ask_paint/src/: epd_100ask_paint.c  epd_100ask_paint.h
fc_joypad_100ask_drivers/: CMakeLists.txt  Kconfig  README.md
fc_joypad_100ask_drivers/src/: fc_joypad_100ask_drivers.c  fc_joypad_100ask_drivers.h
fs_100ask_drivers/: CMakeLists.txt  Kconfig  README.md
fs_100ask_drivers/src/: fs_100ask_drivers.c  fs_100ask_drivers.h  fs_100ask_hal.c  fs_100ask_hal.h  internal_flash_100ask_drivers.c  internal_flash_100ask_drivers.h  lv_port_fs_fatfs.c  lv_port_fs_fatfs.h  sd_spi_100ask.c  sd_spi_100ask.h  sd_spi_100ask_drivers.c  sd_spi_100ask_drivers.h
fs_100ask_drivers/src/drivers/: internal_flash_driver.c  internal_flash_driver.h  sd_spi_driver.c  sd_spi_driver.h
tft_lcd_100ask_drivers/: CMakeLists.txt  Kconfig  README.md
tft_lcd_100ask_drivers/src/: st7796s.c  st7796s.h  tft_lcd_100ask_backlight.c  tft_lcd_100ask_drivers.c  tft_lcd_100ask_drivers.h  tft_lcd_100ask_hal.c  tft_lcd_100ask_hal.h
tft_lcd_100ask_drivers/src/drivers/: tft_lcd_170x320.c  tft_lcd_170x320.h  tft_lcd_320x480.c  tft_lcd_320x480.h  tft_lcd_backlight.c  tft_lcd_backlight.h  tft_lcd_display.c  tft_lcd_display.h
